--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dayjs": "^1.11.13",
     "dinou": "^2.0.3",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
