--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dayjs": "^1.11.13",
     "dinou": "^2.0.3",
+    "jotai-wrapper": "^1.0.3",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
